Add bash to sb-proxy-k8s

--- a/service-manager-plugin/Dockerfile
+++ b/service-manager-plugin/Dockerfile
@@ -2,6 +2,8 @@ FROM  gcr.io/sap-se-gcp-istio-dev/sb-proxy-k8s
 
 WORKDIR /app
 
+RUN apk add --no-cache bash gawk sed grep bc coreutils
+
 ADD service-manager-plugin/service-manager-plugin.so /app/service-manager-plugin.so
 
 ENTRYPOINT [ "./main", "--plugin" , "service-manager-plugin.so" ]
