Add authorization to delete objects in unbind
Co-authored-by: Ralf Pannemans <ralf.pannemans@sap.com>

--- a/service-manager-plugin/authorization.yml
+++ b/service-manager-plugin/authorization.yml
@@ -7,7 +7,7 @@ metadata:
 rules:
 - apiGroups: ["", "networking.istio.io"] # "" indicates the core API group
   resources: ["services", "serviceentries", "destinationrules", "gateways", "virtualservices"]
-  verbs: ["get", "watch", "list", "create"]
+  verbs: ["get", "watch", "list", "create", "delete"]
 ---
 # This role binding allows "dave" to read secrets in the "development" namespace.
 kind: RoleBinding
