--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,6 +26,10 @@
 
 #ignored = ["github.com/kubernetes-incubator/service-catalog/pkg/apis/servicecatalog/v1beta1"]
 
+[[override]]
+  name = "github.com/kubernetes-incubator/service-catalog"
+  revision =  "9d82b390b96d565e9301fdfe4ac822311e765a3c"
+
 #[[override]]
 #  name = "github.com/golang/glog"
 #  revision = "2cc4b790554d1a0c48fcc3aeb891e3de70cf8de0"
