Move istio-prefix to values file.
Co-authored-by: Julia Plachetka <julia.plachetka@sap.com>

--- a/charts/istio-broker-proxy/templates/deployment.yaml
+++ b/charts/istio-broker-proxy/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
         - "--consumerId"
         - "{{ .Values.config.consumer_id }}"
         - "--serviceNamePrefix"
-        - "istio-"
+        - "{{ .Values.config.istio_prefix }}"
         - "--networkProfile"
         - "{{ .Values.config.network_profile }}"
         
