--- a/charts/istio-broker-proxy/values.yaml
+++ b/charts/istio-broker-proxy/values.yaml
@@ -16,6 +16,7 @@ config:
   consumer_id: 
   network_profile: urn:com.sap.istio:public
   service_port: 9999
+  istio_prefix: istio-
 
 destination:
   landscape_domain: cf.landscape.com
