--- a/charts/istio-broker-proxy/templates/service-entry.yaml
+++ b/charts/istio-broker-proxy/templates/service-entry.yaml
@@ -7,7 +7,7 @@ spec:
   hosts:
   - istio-broker.istio.{{.Values.global.destination.landscape_domain}}
   ports:
-  - name: tcp-port-{{.Values.galobal.destination.port}}
+  - name: tcp-port-{{.Values.global.destination.port}}
     number: {{.Values.global.destination.port}}
     protocol: TLS
   resolution: DNS
