--- a/charts/istio-broker-proxy/charts/standalone/templates/service.yaml
+++ b/charts/istio-broker-proxy/charts/standalone/templates/service.yaml
@@ -6,8 +6,8 @@ metadata:
     app: {{ template "istio-broker-proxy.fullname" . }}
 spec:
   ports:
-  - port: {{ .Values.config.service_port }}
-    targetPort: {{ .Values.config.container_port }}
+  - port: {{ .Values.service_port }}
+    targetPort: {{ .Values.global.container_port }}
     name: http
   selector:
     app:  {{ template "istio-broker-proxy.fullname" . }}
