--- a/charts/istio-broker-proxy/requirements.yaml
+++ b/charts/istio-broker-proxy/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
-  - name: istio-config
+  - name: standalone
     version: 0.1.0
-    condition: istio-config.enabled
+    condition: standalone.enabled
