--- a/charts/istio-broker-proxy/templates/deployment.yaml
+++ b/charts/istio-broker-proxy/templates/deployment.yaml
@@ -22,10 +22,10 @@ spec:
         name: istiobroker
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
-        - containerPort: {{ .Values.config.container_port }}
+        - containerPort: {{ .Values.global.container_port }}
         args:
         - "--port"
-        - "{{ .Values.config.container_port }}"
+        - "{{ .Values.global.container_port }}"
         - "--forwardUrl"
         - "{{ .Values.config.forward_url }}"
         - "--consumerId"
