Fix installation task for pipeline
Co-authored-by: Ulrich Kramer <u.kramer@sap.com>

--- a/pipeline/upload-chart.yml
+++ b/pipeline/upload-chart.yml
@@ -28,3 +28,5 @@ run:
       gsutil -qm cp gs://peripli-helm-repo/index.yaml index.yaml
       sed 's/gs:\/\/peripli-helm-repo\///' index.yaml > index.yaml.new
       gsutil -qm cp index.yaml.new gs://peripli-helm-repo/index.yaml
+params:
+  VERSION_POSTFIX: ""
