--- a/pipeline/install-istio-broker.yml
+++ b/pipeline/install-istio-broker.yml
@@ -18,6 +18,7 @@ run:
       export DIGEST=`cat istio-broker-docker-image/digest`
       VERSION=$(cat release-version/version)${VERSION_POSTFIX:-}
 
+      helm init --client-only
       helm del --purge istio-broker-proxy
 
       helm repo add peripli https://www.googleapis.com/storage/v1/b/peripli-helm-repo/o?alt=media
@@ -51,3 +52,5 @@ run:
       kubectl apply -f $EXAMPLE_DEPLOYMENT
       kubectl get clusterservicebroker -n catalog
       kubectl get pods -n catalog
+params:
+  VERSION_POSTFIX: ""
