Fix installation task for pipeline
Co-authored-by: Ulrich Kramer <u.kramer@sap.com>

--- a/pipeline/install-istio-broker.yml
+++ b/pipeline/install-istio-broker.yml
@@ -32,7 +32,7 @@ run:
        --set global.destination.landscape_domain=$LANDSCAPE_DOMAIN  \
        --set standalone.enabled=true \
        --set standalone.broker.user=$BROKER_USER \
-       --set standalone.broker.password=BROKER_PASSWORD \
+       --set standalone.broker.password=$BROKER_PASSWORD \
        --version $VERSION \
          peripli/istio-broker-proxy
 
