Add fixed docker image digest into values file
Co-authored-by: Ulrich Kramer <u.kramer@sap.com>

--- a/pipeline/upload-chart.yml
+++ b/pipeline/upload-chart.yml
@@ -10,11 +10,13 @@ inputs:
     path: go/src/github.com/Peripli/istio-broker-proxy
   - name: istio-deployments
   - name: release-version
+  - name: istio-broker-docker-image
 run:
   path: /bin/sh
   args:
     - -cex
     - |
+      export DIGEST=`cat istio-broker-docker-image/digest`
       gcloud auth activate-service-account gcr-admin@sap-se-gcp-istio-dev.iam.gserviceaccount.com --key-file=istio-deployments/gcr-setup/gcr-admin-credentials.json
       gcloud config set project peripli
       # gsutil mb gs://peripli-helm-repo
@@ -22,6 +24,8 @@ run:
       cd go/src/github.com/Peripli/istio-broker-proxy/charts
       helm init --client-only
       helm plugin install https://github.com/viglesiasce/helm-gcs.git --version v0.2.0
+      sed "s/digest:.*/digest: $DIGEST/" istio-broker-proxy/values.yaml > /tmp/istio-broker-proxy-values.yaml
+      cp /tmp/istio-broker-proxy-values.yaml istio-broker-proxy/values.yaml
       helm package istio-broker-proxy --version $VERSION
       # helm gcs init gs://peripli-helm-repo
       helm gcs push "istio-broker-proxy-$VERSION.tgz" gs://peripli-helm-repo
