Fix KUBECONFIG for dev
Co-authored-by: Ulrich Kramer <u.kramer@sap.com>

--- a/pipeline/install-istio-broker.yml
+++ b/pipeline/install-istio-broker.yml
@@ -13,7 +13,7 @@ run:
     - -cex
     - |
       # ***** DEV *****
-      if [ "$STANDALONE" == true ]; then
+      if [ "$STANDALONE" = true ]; then
         export KUBECONFIG=`pwd`/istio-deployments/gardener/canary/dev.kubeconfig
       else
         export KUBECONFIG=`pwd`/istio-deployments/eps/canary/dev-chaining.kubeconfig
