--- a/pipeline/upload-chart.yml
+++ b/pipeline/upload-chart.yml
@@ -16,15 +16,20 @@ run:
   args:
     - -cex
     - |
-      export DIGEST=`cat istio-broker-docker-image/digest`
       gcloud auth activate-service-account gcr-admin@sap-se-gcp-istio-dev.iam.gserviceaccount.com --key-file=istio-deployments/gcr-setup/gcr-admin-credentials.json
       gcloud config set project peripli
       # gsutil mb gs://peripli-helm-repo
+      TAG=$(cat release-version/version)
+      DIGEST=`cat istio-broker-docker-image/digest`
       VERSION=$(cat release-version/version)$VERSION_POSTFIX
       cd go/src/github.com/Peripli/istio-broker-proxy/charts
       helm init --client-only
       helm plugin install https://github.com/viglesiasce/helm-gcs.git --version v0.2.0
-      sed "s/digest:.*/digest: $DIGEST/" istio-broker-proxy/values.yaml > /tmp/istio-broker-proxy-values.yaml
+      if [ -n "$VERSION_POSTFIX" ]; then
+          sed "s/digest:.*/digest: $DIGEST/" istio-broker-proxy/values.yaml > /tmp/istio-broker-proxy-values.yaml
+      else
+          sed "s/tag:.*/tag: $TAG/" istio-broker-proxy/values.yaml > /tmp/istio-broker-proxy-values.yaml
+      fi
       cp /tmp/istio-broker-proxy-values.yaml istio-broker-proxy/values.yaml
       helm package istio-broker-proxy --version $VERSION
       # helm gcs init gs://peripli-helm-repo
