Increase replicas to 2. Distribute to different nodes if possible.
Co-authored-by: Jakob Schmid <jakob.schmid@sap.com>

--- a/charts/istio-broker-proxy/templates/deployment.yaml
+++ b/charts/istio-broker-proxy/templates/deployment.yaml
@@ -9,6 +9,15 @@ spec:
       labels:
         app: {{ template "istio-broker-proxy.fullname" . }}
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchLabels:
+                  app: {{ template "istio-broker-proxy.fullname" . }}
+              topologyKey: kubernetes.io/hostname
       {{- if .Values.image.pullsecret }}
       imagePullSecrets:
       - name: {{.Values.image.pullsecret}}
