--- a/charts/istio-broker-proxy/templates/deployment.yaml
+++ b/charts/istio-broker-proxy/templates/deployment.yaml
@@ -4,6 +4,11 @@ metadata:
   name: {{ template "istio-broker-proxy.fullname" . }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 2
   template:
     metadata:
       labels:
