--- a/charts/istio-broker-proxy/values.yaml
+++ b/charts/istio-broker-proxy/values.yaml
@@ -3,6 +3,8 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 2
+maxUnavailable: 0
+maxSurge: 2
 
 image:
   repository: gcr.io/peripli
