--- a/charts/istio-broker-proxy/templates/deployment.yaml
+++ b/charts/istio-broker-proxy/templates/deployment.yaml
@@ -46,6 +46,12 @@ spec:
           httpGet:
             path: /health
             port: http-port
+        resources:
+          requests:
+            memory: "32Mi"
+            cpu: "10m"
+          limits:
+            memory: "64Mi"
         args:
         - "--port"
         - "{{ .Values.global.container_port }}"
