--- a/pipeline/install-istio-broker.yml
+++ b/pipeline/install-istio-broker.yml
@@ -12,11 +12,6 @@ run:
   args:
     - -cex
     - |
-      CID_IN_SECRET=$(kubectl get secret -n istio-system istio-egressgateway-certs -o yaml | yaml2json | jq -r '.data["client.crt"]' | base64 -d |openssl x509 -noout -text | grep DNS: | sed 's|.*DNS:||g')
-      if [ "$CID_IN_SECRET" != "$CONSUMER_ID" ]; then
-        echo "ConsumerId in deploy job and secret do not match!"
-        exit 1
-      fi
       # ***** DEV *****
       if [ "$STANDALONE" = true ]; then
         export KUBECONFIG=`pwd`/istio-deployments/gardener/canary/dev.kubeconfig
@@ -36,6 +31,13 @@ run:
       else
         export KUBECONFIG=`pwd`/istio-deployments/eps/canary/dev-chaining.kubeconfig
       fi
+
+      CID_IN_SECRET=$(kubectl get secret -n istio-system istio-egressgateway-certs -o json  | jq -r '.data["client.crt"]' | base64 -d |openssl x509 -noout -text | grep DNS: | sed 's|.*DNS:||g')
+      if [ "$CID_IN_SECRET" != "$CONSUMER_ID" ]; then
+        echo "ConsumerId in deploy job and secret do not match!"
+        exit 1
+      fi
+
       VERSION=$(cat release-version/version)${VERSION_POSTFIX:-}
 
       helm init --client-only
