--- a/pipeline/install-istio-broker.yml
+++ b/pipeline/install-istio-broker.yml
@@ -15,6 +15,19 @@ run:
       # ***** DEV *****
       if [ "$STANDALONE" = true ]; then
         export KUBECONFIG=`pwd`/istio-deployments/gardener/canary/dev.kubeconfig
+        # *** Simple example broker ***
+        EXAMPLE_DEPLOYMENT=/tmp/example-broker-deploy.yaml
+        cat > $EXAMPLE_DEPLOYMENT <<EOF
+      ---
+      apiVersion: servicecatalog.k8s.io/v1beta1
+      kind: ClusterServiceBroker
+      metadata:
+        name: examplebroker
+        namespace: $NAMESPACE
+      spec:
+        url:  https://alex:bigsecret@cf-service-broker-alternate.cfapps.$LANDSCAPE_DOMAIN
+      EOF
+        kubectl apply -f $EXAMPLE_DEPLOYMENT
       else
         export KUBECONFIG=`pwd`/istio-deployments/eps/canary/dev-chaining.kubeconfig
       fi
