Do only delete the pinger server in the delete-pinger job

--- a/charts/istio-broker-proxy/templates/pinger-config-delete-job.yml
+++ b/charts/istio-broker-proxy/templates/pinger-config-delete-job.yml
@@ -11,6 +11,6 @@ spec:
       containers:
         - name: pinger-config-delete
           image: gcr.io/peripli/client
-          command: [ "/app/client", "-client","-delete" ]
+          command: [ "/app/client", "-client","-delete","-service","pinger" ]
       restartPolicy: Never
   backoffLimit: 2
